--- a/dashboard.html
+++ b/dashboard.html
@@ -93,7 +93,14 @@
                         </div>
                         <h3 class="text-xl font-semibold">R9 Racing Full System</h3>
                         <p class="text-gray-600 text-sm mb-2">High-performance full system exhaust for sport bikes. Titanium construction with carbon tip.</p>
-                        <span class="text-xl font-bold text-red-600">Rp 3,500,000</span>
+                        <div class="flex justify-between items-center gap-2">
+                            <span class="text-xl font-bold text-red-600">Rp 3,500,000</span>
+                            <a href="detail-product.html">
+                                <button class="bg-gray-300 py-1.5 px-4 rounded">
+                                    <h1 class="text-black text-xs md:text-sm font-medium">Detail</h1>
+                                </button>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 
@@ -110,7 +117,14 @@
                         </div>
                         <h3 class="text-xl font-semibold">SpeedForce Slip-on</h3>
                         <p class="text-gray-600 text-sm mb-2">Lightweight slip-on exhaust with deep bass sound. Perfect for daily riders.</p>
-                        <span class="text-xl font-bold text-red-600">Rp 1,800,000</span>
+                        <div class="flex justify-between items-center gap-2">
+                            <span class="text-xl font-bold text-red-600">Rp 3,500,000</span>
+                            <a href="detail-product.html">
+                                <button class="bg-gray-300 py-1.5 px-4 rounded">
+                                    <h1 class="text-black text-xs md:text-sm font-medium">Detail</h1>
+                                </button>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 
@@ -127,7 +141,14 @@
                         </div>
                         <h3 class="text-xl font-semibold">Thunderbolt Pro Racing</h3>
                         <p class="text-gray-600 text-sm mb-2">Professional racing exhaust with maximum performance gains. Carbon fiber construction.</p>
-                        <span class="text-xl font-bold text-red-600">Rp 4,200,000</span>
+                        <div class="flex justify-between items-center gap-2">
+                            <span class="text-xl font-bold text-red-600">Rp 3,500,000</span>
+                            <a href="detail-product.html">
+                                <button class="bg-gray-300 py-1.5 px-4 rounded">
+                                    <h1 class="text-black text-xs md:text-sm font-medium">Detail</h1>
+                                </button>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
