--- a/dashboard.html
+++ b/dashboard.html
@@ -97,7 +97,7 @@
                             <span class="text-xl font-bold text-red-600">Rp 3,500,000</span>
                             <a href="detail-product.html">
                                 <button class="bg-gray-300 py-1.5 px-4 rounded">
-                                    <h1 class="text-black text-xs md:text-sm font-medium">Detail</h1>
+                                    <h1 class="text-black text-sm font-medium">Detail</h1>
                                 </button>
                             </a>
                         </div>
@@ -121,7 +121,7 @@
                             <span class="text-xl font-bold text-red-600">Rp 3,500,000</span>
                             <a href="detail-product.html">
                                 <button class="bg-gray-300 py-1.5 px-4 rounded">
-                                    <h1 class="text-black text-xs md:text-sm font-medium">Detail</h1>
+                                    <h1 class="text-black text-sm font-medium">Detail</h1>
                                 </button>
                             </a>
                         </div>
@@ -145,7 +145,7 @@
                             <span class="text-xl font-bold text-red-600">Rp 3,500,000</span>
                             <a href="detail-product.html">
                                 <button class="bg-gray-300 py-1.5 px-4 rounded">
-                                    <h1 class="text-black text-xs md:text-sm font-medium">Detail</h1>
+                                    <h1 class="text-black text-sm font-medium">Detail</h1>
                                 </button>
                             </a>
                         </div>
