--- a/detail-product.html
+++ b/detail-product.html
@@ -66,7 +66,7 @@
                         <p class="text-gray-600 text-sm mb-2">High-performance full system exhaust for sport bikes. Titanium construction with carbon tip.</p>
                         <div class="text-xl font-bold text-red-600 mb-2">Rp 3,500,000</div>
                         <button class="bg-red-500 py-2 px-5 rounded">
-                            <h1 class="text-white text-xs md:text-sm font-medium">Beli Produk</h1>
+                            <h1 class="text-white text-sm font-medium">Beli Produk</h1>
                         </button>
                     </div>
                 </div>
