--- a/login.html
+++ b/login.html
@@ -52,12 +52,12 @@
         <div class="w-[80%] sm:w-[50%] md:w-[35%] bg-white py-10 px-5 rounded-lg md:rounded-xl space-y-3">
             <img class="w-12 mx-auto" src="/svgs/alert-warning.svg" alt="alert-warning">
             <div class="text-center mx-10">
-                <h1 class="text-base md:text-lg text-[#4A4A4A] font-semibold">
+                <h1 class="text-lg md:text-xl text-[#4A4A4A] font-semibold">
                     Password anda salah
                 </h1>
             </div>
             <div @click="modal = false" class="w-fit bg-[#F21E1EED] py-1.5 px-6 rounded mx-auto cursor-pointer">
-                <h1 class="text-xs md:text-sm text-white font-medium capitalize">Mengerti</h1>
+                <h1 class="text-white font-medium capitalize">Mengerti</h1>
             </div>
         </div>
     </div>
