--- a/user/dashboard.html
+++ b/user/dashboard.html
@@ -347,5 +347,28 @@
             </form>
         </div>
     </div>
+
+    <footer class="md:hidden fixed bottom-0 w-full bg-white p-3 shadow-[0_0_10px_rgba(0,0,0,0.2)]">
+        <div class="flex justify-center items-center">
+            <div class="flex items-center gap-10">
+                <div class="flex flex-col items-center">
+                    <img class="w-8 h-8 object-cover" src="/svgs/home.svg" alt="home">
+                    <h1 class="text-black text-sm font-semibold">Home</h1>
+                </div>
+                <div class="flex flex-col items-center">
+                    <img class="w-8 h-8 object-cover" src="/svgs/documen.svg" alt="home">
+                    <h1 class="text-black text-sm font-semibold">Edukasi</h1>
+                </div>
+                <div class="flex flex-col items-center">
+                    <img class="w-8 h-8 object-cover" src="/svgs/shop.svg" alt="home">
+                    <h1 class="text-black text-sm font-semibold">Toko</h1>
+                </div>
+                <div class="flex flex-col items-center">
+                    <img class="w-8 h-8 object-cover" src="/svgs/user.svg" alt="home">
+                    <h1 class="text-black text-sm font-semibold">Profile</h1>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
