--- a/user/dashboard.html
+++ b/user/dashboard.html
@@ -352,11 +352,11 @@
         <div class="flex justify-center items-center">
             <div class="flex items-center gap-10">
                 <div class="flex flex-col items-center">
-                    <img class="w-8 h-8 object-cover" src="/svgs/home.svg" alt="home">
+                    <img class="w-9 h-9 object-cover" src="/svgs/home.svg" alt="home">
                     <h1 class="text-black text-sm font-semibold">Home</h1>
                 </div>
                 <div class="flex flex-col items-center">
-                    <img class="w-8 h-8 object-cover" src="/svgs/documen.svg" alt="home">
+                    <img class="w-8 h-8 object-cover" src="/svgs/education.svg" alt="home">
                     <h1 class="text-black text-sm font-semibold">Edukasi</h1>
                 </div>
                 <div class="flex flex-col items-center">
