--- a/password.html
+++ b/password.html
@@ -16,7 +16,7 @@
     <main class="md:flex md:justify-center md:items-center md:h-screen">
         <div class="w-full sm:w-[80%] md:w-full md:p-10 md:grid md:grid-cols-2 md:gap-10 mx-auto">
             <img class="sm:hidden w-full h-52 bg-slate-500" src="/imgs/bg2.png" alt="backgroud">
-            <div class="login-box relative z-10 w-full bg-white p-6 -mt-3.5 sm:mt-20 md:mt-0 md:shadow-[0_0_10px_rgba(0,0,0,0.2)] rounded-t-3xl sm:rounded-lg space-y-5 overflow-hidden">
+            <div class="login-box relative z-10 w-full bg-white p-6 -mt-3.5 sm:mt-20 md:mt-0 rounded-t-3xl sm:rounded-lg space-y-5 overflow-hidden">
                 <h1 class="text-center text-2xl text-gray-600 font-bold">Ganti Kata Sandi</h1>
                 
                 <!-- Start Form -->
@@ -49,7 +49,7 @@
                 <!-- End Form -->
 
             </div>
-            <img class="hidden md:block w-full h-full bg-cover md:shadow-[0_0_10px_rgba(0,0,0,0.2)] rounded-lg" src="/imgs/image.png" alt="image">
+            <img class="hidden md:block w-full h-full object-contain rounded-lg" src="/imgs/image.png" alt="image">
         </div>
 
         <!-- Start Alert -->
