--- a/user/dashboard.html
+++ b/user/dashboard.html
@@ -348,27 +348,37 @@
         </div>
     </div>
 
+    <!-- Start Update Terbaru -->
     <footer class="md:hidden fixed bottom-0 w-full bg-white p-2.5 shadow-[0_0_10px_rgba(0,0,0,0.2)]">
         <div class="flex justify-center items-center">
             <div class="flex items-center gap-3">
-                <button class="flex flex-col items-center hover:bg-gray-400/50 active:bg-gray-400/50 py-1.5 px-3.5 rounded">
-                    <img class="w-8 h-8 object-cover" src="/svgs/home.svg" alt="home">
-                    <h1 class="text-black text-sm font-semibold">Home</h1>
-                </button>
-                <button class="flex flex-col items-center hover:bg-gray-400/50 active:bg-gray-400/50 py-1.5 px-3.5 rounded">
-                    <img class="w-8 h-8 object-cover" src="/svgs/education.svg" alt="home">
-                    <h1 class="text-black text-sm font-semibold">Edukasi</h1>
-                </button>
-                <button class="flex flex-col items-center hover:bg-gray-400/50 active:bg-gray-400/50 py-1.5 px-3.5 rounded">
-                    <img class="w-8 h-8 object-cover" src="/svgs/shop.svg" alt="home">
-                    <h1 class="text-black text-sm font-semibold">Toko</h1>
-                </button>
-                <button class="flex flex-col items-center hover:bg-gray-400/50 active:bg-gray-400/50 py-1.5 px-3.5 rounded">
-                    <img class="w-8 h-8 object-cover" src="/svgs/user.svg" alt="home">
-                    <h1 class="text-black text-sm font-semibold">Profile</h1>
-                </button>
+                <a href="dashboard.html">
+                    <button class="flex flex-col items-center hover:bg-gray-400/50 active:bg-gray-400/50 py-1.5 px-3.5 rounded">
+                        <img class="w-8 h-8 object-cover" src="/svgs/home.svg" alt="home">
+                        <h1 class="text-black text-sm font-semibold">Home</h1>
+                    </button>
+                </a>
+                <a href="#">
+                    <button class="flex flex-col items-center hover:bg-gray-400/50 active:bg-gray-400/50 py-1.5 px-3.5 rounded">
+                        <img class="w-8 h-8 object-cover" src="/svgs/education.svg" alt="home">
+                        <h1 class="text-black text-sm font-semibold">Edukasi</h1>
+                    </button>
+                </a>
+                <a href="#">
+                    <button class="flex flex-col items-center hover:bg-gray-400/50 active:bg-gray-400/50 py-1.5 px-3.5 rounded">
+                        <img class="w-8 h-8 object-cover" src="/svgs/shop.svg" alt="home">
+                        <h1 class="text-black text-sm font-semibold">Toko</h1>
+                    </button>
+                </a>
+                <a href="#">
+                    <button class="flex flex-col items-center hover:bg-gray-400/50 active:bg-gray-400/50 py-1.5 px-3.5 rounded">
+                        <img class="w-8 h-8 object-cover" src="/svgs/user.svg" alt="home">
+                        <h1 class="text-black text-sm font-semibold">Profile</h1>
+                    </button>
+                </a>
             </div>
         </div>
     </footer>
+    <!-- End Update Terbaru -->
 </body>
 </html>
